--- a/app/views/users/settings/_form.html.erb
+++ b/app/views/users/settings/_form.html.erb
@@ -1,6 +1,5 @@
-<%= simple_form_for setting, url: user_setting_path(setting.user) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<%= custom_form_for setting, url: user_setting_path(setting.user) do |f| %>
+  <%= f.base_errors %>
 
   <%= f.input :editor_type, include_blank: false %>
 
