--- a/lib/generators/rails_template/scaffold/templates/_form.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/_form.html.erb.tt
@@ -1,6 +1,5 @@
-<%%= simple_form_for <%= singular_table_name %> do |f| %>
-  <%%= f.error_notification %>
-  <%%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<%%= custom_form_for <%= singular_table_name %> do |f| %>
+  <%%= f.base_errors %>
 
 <%- attributes.each do |attribute| -%>
   <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
