--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -3,20 +3,23 @@ class <%= controller_class_name %>Controller < ApplicationController
   before_action :set_<%= singular_table_name %>, only: %i[show edit update destroy]
 
   def index
-    @<%= plural_table_name %> = authorize policy_scope(<%= class_name %>).page(params[:page])
+    @<%= plural_table_name %> = policy_scope(<%= class_name %>).page(params[:page])
+    authorize @<%= plural_table_name %>
   end
 
   def show; end
 
   def new
-    @<%= singular_table_name %> = authorize <%= orm_class.build(class_name) %>
+    @<%= singular_table_name %> = <%= orm_class.build(class_name) %>
+    authorize @<%= singular_table_name %>
     skip_policy_scope
   end
 
   def edit; end
 
   def create
-    @<%= singular_table_name %> = authorize <%= orm_class.build(class_name, "#{singular_table_name}_params") %>
+    @<%= singular_table_name %> = <%= orm_class.build(class_name, "#{singular_table_name}_params") %>
+    authorize @<%= singular_table_name %>
     skip_policy_scope
 
     if @<%= orm_instance.save %>
@@ -42,7 +45,8 @@ class <%= controller_class_name %>Controller < ApplicationController
   private
 
   def set_<%= singular_table_name %>
-    @<%= singular_table_name %> = authorize policy_scope(<%= class_name %>).find_by!(hashid: params[:hashid])
+    @<%= singular_table_name %> = policy_scope(<%= class_name %>).find_by!(hashid: params[:hashid])
+    authorize @<%= singular_table_name %>
   end
 
   def <%= "#{singular_table_name}_params" %>
