Add toggle button to markdown editor.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,12 @@
   <%= f.base_errors %>
 
   <%= f.input :title %>
-  <%= f.input :content, as: :content_editor, editor_type: post.editor_type, input_html: { class: "h-[30rem]" } %>
+  <%= f.input(
+        :content,
+        as: :content_editor,
+        editor_type: post.editor_type,
+        input_html: { toggle: "editor", class: "h-[30rem]" }
+      ) %>
   <%= f.input :published %>
 
   <%= f.button :submit %>
