Add responsive mode to markdown input.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,7 +6,7 @@
         :content,
         as: :content_editor,
         editor_type: post.editor_type,
-        input_html: { toggle: "editor", class: "h-[30rem]" }
+        input_html: { class: "h-[30rem]" }
       ) %>
   <%= f.input :published %>
 
