--- a/lib/generators/rails_template/scaffold/templates/helper.rb.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/helper.rb.erb.tt
@@ -1,23 +1,23 @@
 <% module_namespacing do -%>
 module <%= controller_class_name %>Helper
   def <%= plural_route_name %>_link
-    link_primary t("<%= view_i18n_scope %>.index.title"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
+    button_link_primary t("<%= view_i18n_scope %>.index.title"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
   end
 
   def back_to_<%= plural_route_name %>_link
-    link_secondary t("back_to_index"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
+    button_link_secondary t("back_to_index"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
   end
 
   def <%= singular_route_name %>_link(<%= singular_table_name %>)
-    link_primary t("detail"), <%= singular_table_name %> if policy(<%= singular_table_name %>).show?
+    button_link_primary t("detail"), <%= singular_table_name %> if policy(<%= singular_table_name %>).show?
   end
 
   def new_<%= singular_route_name %>_link
-    link_primary t("<%= view_i18n_scope %>.new.title"), new_<%= singular_route_name %>_path if policy(<%= class_name %>).new?
+    button_link_primary t("<%= view_i18n_scope %>.new.title"), new_<%= singular_route_name %>_path if policy(<%= class_name %>).new?
   end
 
   def edit_<%= singular_route_name %>_link(<%= singular_table_name %>)
-    link_primary t("edit"), [:edit, <%= singular_table_name %>] if policy(<%= singular_table_name %>).edit?
+    button_link_primary t("edit"), [:edit, <%= singular_table_name %>] if policy(<%= singular_table_name %>).edit?
   end
 
   def destroy_<%= singular_route_name %>_button(<%= singular_table_name %>)
