--- a/app/views/posts/_index_post.html.erb
+++ b/app/views/posts/_index_post.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id post %>">
+<div id="<%= dom_id post %>" class="index-post">
   <div class="my-default font-bold"><%= post.title %></div>
 
   <div class="scaffold-buttons my-default">
