--- a/lib/generators/rails_template/scaffold/templates/index_partial.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/index_partial.html.erb.tt
@@ -1,4 +1,4 @@
-<div id="<%%= dom_id <%= singular_table_name %> %>">
+<div id="<%%= dom_id <%= singular_table_name %> %>" class="index-<%= singular_table_name %>">
   <div class="my-default font-bold"><%%= <%= singular_table_name %>.id %></div>
 
   <div class="scaffold-buttons my-default">
