Change button_link method name in scaffold helper.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div>
   <div class="scaffold-buttons my-default">
-    <%= edit_post_link @post %>
+    <%= edit_post_button_link @post %>
     <%= destroy_post_button @post %>
-    <%= back_to_posts_link %>
+    <%= back_to_posts_button_link %>
   </div>
 
   <%= render @post %>
