--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,8 +2,8 @@
   <%= h1 t(".title"), class: "my-default" %>
 
   <div class="scaffold-buttons my-default">
-    <%= post_link @post %>
-    <%= back_to_posts_link %>
+    <%= post_button_link @post %>
+    <%= back_to_posts_button_link %>
   </div>
 
   <%= render "form", post: @post %>
