--- a/app/views/users/settings/show.html.erb
+++ b/app/views/users/settings/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="scaffold-buttons my-default">
-    <%= edit_user_setting_link @setting %>
+    <%= edit_user_setting_button_link @setting %>
   </div>
 
   <%= render @setting %>
