--- a/app/views/posts/_index_post.html.erb
+++ b/app/views/posts/_index_post.html.erb
@@ -2,7 +2,7 @@
   <div class="my-default font-bold"><%= post.title %></div>
 
   <div class="scaffold-buttons my-default">
-    <%= post_button_link post %>
-    <%= edit_post_button_link post %>
+    <%= post_btn_link post %>
+    <%= edit_post_btn_link post %>
   </div>
 </div>
