--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div class="horizontal-center justify-between">
     <%= h1 t(".title"), class: "my-default" %>
-    <%= new_post_button_link %>
+    <%= new_post_btn_link %>
   </div>
 
   <%= render partial: "index_post", collection: @posts, as: :post %>
