--- a/app/views/users/settings/edit.html.erb
+++ b/app/views/users/settings/edit.html.erb
@@ -2,7 +2,7 @@
   <%= h1 t(".title"), class: "my-default" %>
 
   <div class="scaffold-buttons my-default">
-    <%= user_setting_button_link @setting %>
+    <%= user_setting_btn_link @setting %>
   </div>
 
   <%= render "form", setting: @setting %>
