--- a/lib/generators/rails_template/scaffold/templates/helper.rb.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/helper.rb.erb.tt
@@ -1,33 +1,34 @@
 <% module_namespacing do -%>
 module <%= controller_class_name %>Helper
-  def <%= plural_route_name %>_button_link
-    button_link_primary t("<%= view_i18n_scope %>.index.title"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
+  def <%= plural_route_name %>_btn_link
+    btn_to t("<%= view_i18n_scope %>.index.title"), <%= plural_route_name %>_path, type: :link if policy(<%= class_name %>).index?
   end
 
-  def back_to_<%= plural_route_name %>_button_link
-    button_link_secondary t("back_to_index"), <%= plural_route_name %>_path if policy(<%= class_name %>).index?
+  def back_to_<%= plural_route_name %>_btn_link
+    btn_to t("back_to_index"), <%= plural_route_name %>_path, type: :link, color: :secondary if policy(<%= class_name %>).index?
   end
 
-  def <%= singular_route_name %>_button_link(<%= singular_table_name %>)
-    button_link_primary t("detail"), <%= singular_table_name %> if policy(<%= singular_table_name %>).show?
+  def <%= singular_route_name %>_btn_link(<%= singular_table_name %>)
+    btn_to t("detail"), <%= singular_table_name %>, type: :link if policy(<%= singular_table_name %>).show?
   end
 
-  def new_<%= singular_route_name %>_button_link
-    button_link_primary t("<%= view_i18n_scope %>.new.title"), new_<%= singular_route_name %>_path if policy(<%= class_name %>).new?
+  def new_<%= singular_route_name %>_btn_link
+    btn_to t("<%= view_i18n_scope %>.new.title"), new_<%= singular_route_name %>_path, type: :link if policy(<%= class_name %>).new?
   end
 
-  def edit_<%= singular_route_name %>_button_link(<%= singular_table_name %>)
-    button_link_primary t("edit"), [:edit, <%= singular_table_name %>] if policy(<%= singular_table_name %>).edit?
+  def edit_<%= singular_route_name %>_btn_link(<%= singular_table_name %>)
+    btn_to t("edit"), [:edit, <%= singular_table_name %>], type: :link if policy(<%= singular_table_name %>).edit?
   end
 
   def destroy_<%= singular_route_name %>_button(<%= singular_table_name %>)
     return unless policy(<%= singular_table_name %>).destroy?
 
-    button_danger(
+    btn_to(
       t("destroy"),
       <%= singular_table_name %>,
       method: :delete,
-      form: { data: { turbo_confirm: t("destroy_confirm") } }
+      form: { data: { turbo_confirm: t("destroy_confirm") } },
+      color: :danger
     )
   end
 end
