Add lnk_to helper.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="center h-16 bg-gray-100">
   <div>
     &copy;
-    <%= external_link_to "sijiaoh", "https://twitter.com/sijiaoh" %>
+    <%= lnk_to "sijiaoh", "https://twitter.com/sijiaoh", external: true %>
   </div>
 </footer>
