--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,8 +2,8 @@
   <%= h1 t(".title"), class: "my-default" %>
 
   <div class="scaffold-buttons my-default">
-    <%= post_btn_link @post %>
-    <%= back_to_posts_btn_link %>
+    <%= show_lnk_to @post, type: :button %>
+    <%= back_to_index_lnk_to Post, type: :button %>
   </div>
 
   <%= render "form", post: @post %>
