--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <div>
   <%= h1 t("title"), title: false, class: "my-default" %>
-  <%= posts_btn_link %>
+  <%= index_lnk_to Post, type: :button %>
 </div>
