--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div>
   <div class="scaffold-buttons my-default">
-    <%= edit_post_btn_link @post %>
-    <%= destroy_post_button @post %>
-    <%= back_to_posts_btn_link %>
+    <%= edit_lnk_to @post, type: :button %>
+    <%= destroy_btn_to @post %>
+    <%= back_to_index_lnk_to Post, type: :button %>
   </div>
 
   <%= render @post %>
