Change path to arguments instead of model or record.

--- a/app/views/users/settings/show.html.erb
+++ b/app/views/users/settings/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="scaffold-buttons my-default">
-    <%= edit_lnk_to @setting, path: edit_user_setting_path(@setting.user, @setting), type: :button %>
+    <%= edit_lnk_to edit_user_setting_path(@setting.user, @setting), record: @setting, type: :button %>
   </div>
 
   <%= render @setting %>
