Change scaffold links type to button.

--- a/lib/generators/rails_template/scaffold/templates/new.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/new.html.erb.tt
@@ -3,5 +3,5 @@
 
   <%%= render "form", <%= singular_table_name %>: @<%= singular_table_name %> %>
 
-  <%%= back_to_index_lnk_to <%= class_name %> %>
+  <%%= back_to_index_lnk_to <%= class_name %>, type: :button %>
 </div>
