Change scaffold index_partial to partial_index.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
     <%= new_lnk_to Post, type: :button %>
   </div>
 
-  <%= render partial: "index_post", collection: @posts, as: :post %>
+  <%= render "post_index", posts: @posts %>
 
   <%= paginate @posts %>
 </div>
