--- a/lib/generators/rails_template/scaffold/templates/edit.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/edit.html.erb.tt
@@ -2,9 +2,9 @@
   <%%= h1 t(".title"), class: "my-default" %>
 
   <div class="scaffold-buttons my-default">
-    <%%= show_lnk_to @<%= singular_table_name %>, type: :button %>
+    <%%= show_lnk_to @<%= file_name %>, type: :button %>
     <%%= back_to_index_lnk_to <%= class_name %>, type: :button %>
   </div>
 
-  <%%= render "form", <%= singular_table_name %>: @<%= singular_table_name %> %>
+  <%%= render "form", <%= file_name %>: @<%= file_name %> %>
 </div>
