--- a/lib/generators/rails_template/scaffold/templates/partial.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/partial.html.erb.tt
@@ -1,4 +1,4 @@
-<div id="<%%= dom_id <%= singular_table_name %> %>">
+<div id="<%%= dom_id <%= file_name %> %>">
   <%%= h1 <%= class_name %>.model_name.human, class: "my-default" %>
 
 <% attributes.reject(&:password_digest?).each do |attribute| -%>
@@ -9,13 +9,13 @@
 <% end -%>
     <div class="font-medium"><%%= <%= class_name %>.human_attribute_name :<%= attribute.column_name  %> %>:</div>
 <% if attribute.attachment? -%>
-    <%%= link_to <%= singular_table_name %>.<%= attribute.column_name %>.filename, <%= singular_table_name %>.<%= attribute.column_name %> if <%= singular_table_name %>.<%= attribute.column_name %>.attached? %>
+    <%%= link_to <%= file_name %>.<%= attribute.column_name %>.filename, <%= file_name %>.<%= attribute.column_name %> if <%= file_name %>.<%= attribute.column_name %>.attached? %>
 <% elsif attribute.attachments? -%>
-    <%% <%= singular_table_name %>.<%= attribute.column_name %>.each do |<%= attribute.singular_name %>| %>
+    <%% <%= file_name %>.<%= attribute.column_name %>.each do |<%= attribute.singular_name %>| %>
       <div><%%= link_to <%= attribute.singular_name %>.filename, <%= attribute.singular_name %> %></div>
     <%% end %>
 <% else -%>
-    <%%= <%= singular_table_name %>.<%= attribute.column_name %> %>
+    <%%= <%= file_name %>.<%= attribute.column_name %> %>
 <% end -%>
   </div>
 <% end -%>
