--- a/lib/generators/rails_template/scaffold/templates/partial_index.html.erb.tt
+++ b/lib/generators/rails_template/scaffold/templates/partial_index.html.erb.tt
@@ -1,12 +1,12 @@
-<div class="<%= singular_table_name %>-index">
-  <%%= <%= plural_table_name %>.each do |<%= singular_table_name %>| %>
-    <div id="<%%= dom_id <%= singular_table_name %> %>" class="<%= singular_table_name %>">
-      <div class="my-default font-bold"><%%= <%= singular_table_name %>.id %></div>
+<div class="<%= file_name %>-index">
+  <%% <%= plural_file_name %>.each do |<%= file_name %>| %>
+    <div id="<%%= dom_id <%= file_name %> %>" class="<%= file_name %>">
+      <div class="my-default font-bold"><%%= <%= file_name %>.hashid %></div>
 
       <div class="scaffold-buttons my-default">
-        <%%= show_lnk_to <%= singular_table_name %>, type: :button %>
-        <%%= edit_lnk_to <%= singular_table_name %>, type: :button %>
+        <%%= show_lnk_to <%= file_name %>, type: :button %>
+        <%%= edit_lnk_to <%= file_name %>, type: :button %>
       </div>
     </div>
-  <%%= end %>
+  <%% end %>
 </div>
