--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -1,55 +1,55 @@
 <% module_namespacing do -%>
 class <%= controller_class_name %>Controller < ApplicationController
-  before_action :set_<%= singular_table_name %>, only: %i[show edit update destroy]
+  before_action :set_<%= file_name %>, only: %i[show edit update destroy]
 
   def index
-    @<%= plural_table_name %> = policy_scope(<%= class_name %>).page(params[:page])
-    authorize @<%= plural_table_name %>
+    @<%= plural_file_name %> = policy_scope(<%= class_name %>).page(params[:page])
+    authorize @<%= plural_file_name %>
   end
 
   def show; end
 
   def new
-    @<%= singular_table_name %> = <%= orm_class.build(class_name) %>
-    authorize @<%= singular_table_name %>
+    @<%= file_name %> = <%= orm_class.build(class_name) %>
+    authorize @<%= file_name %>
     skip_policy_scope
   end
 
   def edit; end
 
   def create
-    @<%= singular_table_name %> = <%= orm_class.build(class_name, "#{singular_table_name}_params") %>
-    authorize @<%= singular_table_name %>
+    @<%= file_name %> = <%= orm_class.build(class_name, "#{file_name}_params") %>
+    authorize @<%= file_name %>
     skip_policy_scope
 
-    if @<%= orm_instance.save %>
-      redirect_to <%= redirect_resource_name %>, notice: notice_message(<%= class_name %>)
+    if @<%= file_name %>.save
+      redirect_to @<%= file_name %>, notice: notice_message(<%= class_name %>)
     else
       render :new, status: :unprocessable_entity
     end
   end
 
   def update
-    if @<%= orm_instance.update("#{singular_table_name}_params") %>
-      redirect_to <%= redirect_resource_name %>, notice: notice_message(<%= class_name %>)
+    if @<%= file_name %>.update(<%= file_name %>_params)
+      redirect_to @<%= file_name %>, notice: notice_message(<%= class_name %>)
     else
       render :edit, status: :unprocessable_entity
     end
   end
 
   def destroy
-    @<%= orm_instance.destroy %>
+    @<%= file_name %>.destroy
     redirect_to <%= index_helper %>_url, notice: notice_message(<%= class_name %>)
   end
 
   private
 
-  def set_<%= singular_table_name %>
-    @<%= singular_table_name %> = policy_scope(<%= class_name %>).find_by!(hashid: params[:hashid])
-    authorize @<%= singular_table_name %>
+  def set_<%= file_name %>
+    @<%= file_name %> = policy_scope(<%= class_name %>).find_by!(hashid: params[:hashid])
+    authorize @<%= file_name %>
   end
 
-  def <%= "#{singular_table_name}_params" %>
+  def <%= "#{file_name}_params" %>
     <%- if attributes_names.empty? -%>
     params.fetch(:<%= singular_table_name %>, {})
     <%- else -%>
